correct alignment of social icons in the homepage blocks

--- a/sites/all/themes/onedge/css/importer.css
+++ b/sites/all/themes/onedge/css/importer.css
@@ -495,7 +495,7 @@ textarea {
         margin-right: 25px;
         margin-bottom: 0; } }
   .block--home-social .fb, .block--home-social .ig {
-    display: block;
+    display: inline-block;
     color: black;
     text-decoration: none;
     line-height: 1;
