--- a/sites/all/themes/onedge/sass/pages/_home.scss
+++ b/sites/all/themes/onedge/sass/pages/_home.scss
@@ -202,7 +202,7 @@
   }
   .fb, .ig
   {
-    display: block;
+    display: inline-block;
     color: black;
     text-decoration: none;
     line-height: 1;
